--- a/sales.html
+++ b/sales.html
@@ -5,5 +5,13 @@
   <title>Sales Spread by Location</title>
 </head>
 <body>
+  <div id="first-and-pike-output">
+    <ul id="first-and-pike">1st and Pike Location Statistics</ul>
+  </div
+  <ul id="seatac"></ul>
+  <ul id="seattle-center"></ul>
+  <ul id="capitol-hill"></ul>
+  <ul id="alki"></ul>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
