--- a/sales.html
+++ b/sales.html
@@ -5,13 +5,11 @@
   <title>Sales Spread by Location</title>
 </head>
 <body>
-  <div id="first-and-pike-output">
-    <ul id="first-and-pike">1st and Pike Location Statistics</ul>
-  </div
-  <ul id="seatac"></ul>
-  <ul id="seattle-center"></ul>
-  <ul id="capitol-hill"></ul>
-  <ul id="alki"></ul>
+  <ul id="first-and-pike">1st and Pike Location Statistics</ul>
+  <ul id="seatac">Seatac International Airport Location Statistics</ul>
+  <ul id="seattle-center">Seattle-Center Location Statistics</ul>
+  <ul id="capitol-hill">Capitol Hill Location Statistics</ul>
+  <ul id="alki">Alki Location Statistics</ul>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
