made minor style changes to public-facing page on saturday morning

--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Cuprum' rel='stylesheet'>
   <title>Welcome to Pat's Salmon-Cookies!</title>
 </head>
 <body>
   <h1>Pat's Salmon-Cookies</h1>
   <div id="location-content">
     <h3>1st and Pike</h3>
+    <p>The original location.</p>
   </div>
   <div id="location-content">
     <h3>Seatac Airport</h3>
+    <p>For when you need one of our delicious Salmon-Cookies on the go.</p>
   </div>
   <div id="location-content">
     <h3>Seattle-Center</h3>
+    <p>Set in the landmark of Seattle.</p>
   </div>
   <div id="location-content">
     <h3>Capitol Hill</h3>
+    <p>In the beating heart of Seattle.</p>
   </div>
   <div id="location-content">
     <h3>Alki Beach</h3>
+    <p>Whether you're in Seattle or viewing it from afar, we have you covered.</p>
   </div>
 </body>
 </html>
