--- a/sales.html
+++ b/sales.html
@@ -5,10 +5,10 @@
   <title>Sales Spread by Location</title>
 </head>
 <body>
-  <table>
+  <table id="table">
     <thead id="hours-of-operation"></thead>
-    <tbody id="store-information-table">
-    </tbody>
+    <tbody id="store-information-table"></tbody>
+    <tfoot id="totals"></tfoot>
   </table>
   <script type="text/javascript" src="app.js"></script>
 </body>
