started implementing the salmon cookie tosser stretch goal into my code, created two functions for it so far.

--- a/sales.html
+++ b/sales.html
@@ -10,6 +10,11 @@
     <tbody id="store-information-table"></tbody>
     <tfoot id="totals"></tfoot>
   </table>
+  <table id="jo-table">
+    <thead id="cookie-tosser-header"></thead>
+    <tbody id="cookie-tosser-info"></tbody>
+    <tfoot id="cookie-tosser-footer"></tfoot>
+  </table>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
