finished stretch goal of rendering Jo's table.

--- a/sales.html
+++ b/sales.html
@@ -6,11 +6,13 @@
 </head>
 <body>
   <table id="table">
+    <h1>Cookie Sales Store Information</h1>
     <thead id="hours-of-operation"></thead>
     <tbody id="store-information-table"></tbody>
     <tfoot id="totals"></tfoot>
   </table>
   <table id="jo-table">
+    <h1>Cookie Tosser Store Information</h1>
     <thead id="cookie-tosser-header"></thead>
     <tbody id="cookie-tosser-info"></tbody>
     <tfoot id="cookie-tosser-footer"></tfoot>
