tried mending jo's table to include newly created store.

--- a/sales.html
+++ b/sales.html
@@ -19,7 +19,7 @@
   </table>
   <form id="form">
       <fieldset>
-        <legend>New Store:</legend>
+        <legend>New Store Creator:</legend>
 
         <div>
           <label for="location">New Store Name:</label>
